index.html updated for error display testing

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Currency Convert</title>
 </head>
 <body>
-  <div id="exist"></div>
+  <div class="container">
+    <form class="form-group">
+      <label for="selectedCurrency">Enter a Currency:</label>
+      <input type="text" id="selectedCurrency" class="form-control">
+      <button type="submit" class="btn btn-info">Go!</button>
+    </form>
+    <span id="error"></span>
+  </div>
+
 </body>
 </html>
