fix big for API Key to properly work

--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,8 @@
   <div class="container">
     <form class="form-group">
       <label for="selectedCurrency">Enter a Currency:</label>
-      <input type="text" id="selectedCurrency" class="form-control">
-      <button type="submit" class="btn btn-info">Go!</button>
+      <input type="text" id="selectedCurrency" class="form-control" placeholder="KPW">
+      <button type="submit" class="btn btn-info">Convert</button>
     </form>
     <span id="error"></span>
   </div>
