--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
       <button type="submit" class="btn btn-info">Convert</button>
     </form>
     <span id="error"></span>
+    <span id="conversion"></span>
   </div>
 
 </body>
