updated project to show error

--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,9 @@
 </head>
 <body>
   <div class="container">
-    <form class="form-group">
       <label for="selectedCurrency">Enter a Currency:</label>
-      <input type="text" id="selectedCurrency" class="form-control" placeholder="KPW">
-      <button type="submit" class="btn btn-info">Convert</button>
-    </form>
+      <input type="text" id="selectedCurrency" placeholder="KPW">
+      <button class="btn btn-info" id="convert">Convert</button>
     <span id="error"></span>
     <span id="conversion"></span>
   </div>
