--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
 <body>
   <div class="container">
       <label for="selectedCurrency">Enter a Currency:</label>
+      <input type="text" id="dollarAmount" placeholder="$$$">
       <input type="text" id="selectedCurrency" placeholder="KPW">
       <button class="btn btn-info" id="convert">Convert</button>
     <span id="error"></span>
