added code to capture user inputs as array

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,11 @@
   <div class="container">
       <label for="selectedCurrency">Enter a Currency:</label>
       <input type="text" id="dollarAmount" placeholder="$$$">
-      <input type="text" id="selectedCurrency" placeholder="KPW">
+      <input type="text" id="currencyOne" placeholder="KPW">
+      <input type="text" id="currencyTwo" placeholder="KPW">
+      <input type="text" id="currencyThree" placeholder="KPW">
+      <input type="text" id="currencyFour" placeholder="KPW">
+      <input type="text" id="currencyFive" placeholder="KPW">
       <button class="btn btn-info" id="convert">Convert</button>
     <span id="error"></span>
     <span id="conversion"></span>
