--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,15 @@
         </div>
       </div>
       <div class="card col-md-4">
-        <span id="error"></span>
-        <span id="conversion"></span>
+        <div class="card-title">
+          <h2>Conversions:</h2>
+        </div>
+        <div class="card-body">
+          <ul>
+            <span id="error"></span>
+            <span id="conversion"></span>
+          </ul>
+        </div>
       </div>
     </div>
     
