update index.html with additional user instructions

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
   <div class="container">
     <div class="jumbotron">
       <h1>Currency Convertor</h1>
-      <p>Below will calculate the conversion rates to USD.</p>
+      <p>Below allows you to enter an amount, in USD, and up to 5 different currency codes to convert to. You can find a list of currency codes <a href="https://en.wikipedia.org/wiki/ISO_4217">here</a>. If a currency does not exist in the convertor, such as the example KPW, it will inform you that it cannot cover a rate for it.</p>
     </div>
     <div class="row">
       <div class=" card col-4">
@@ -36,7 +36,6 @@
         </div>
       </div>
     </div>
-    
   </div>
 
 </body>
